--- a/To-do List WebApp/frontend/src/App.css
+++ b/To-do List WebApp/frontend/src/App.css
@@ -1,9 +1,9 @@
 .content{
   display: flex;
+  width: 100%;
+  align-items: center;
+  flex-wrap: nowrap;
   flex-direction: column;
-  align-items: center ;
-  width :100%;
-  justify-content: space-between;
 }
 .addTask{
   display: flex;
@@ -13,13 +13,31 @@
   border-bottom:1px solid red;
   margin: 1%;
 }
-.addForm{
+/* .addForm{
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
+} */
+
+form.addForm.form-control.bg-dark {
+  border: 0px;
+  display: flex;
+  /* border-bottom: 1px solid red; */
+  flex-wrap: nowrap;
+  align-items: center;
+  flex-direction: row;
+    justify-content: center;
 }
-.addButton{
-  background-color: blue;
+
+.Edit.form-control.bg-dark{
+  display: flex;
+  border:0px;
+  justify-content: center;
 }
+
+
 input[type=text]{
   width:400px;
   height: 50px;
@@ -29,49 +47,44 @@ input[type=text]{
   font-family:sans-serif;
   color: white;
 }
-/* input[type=text]:placeholder-shown */
 .addText{
-  color: #5f5f5f;  
+  color: #5f5f5f;
+  margin: 10px;
 }
 
 button[type=submit]
 {
-  width: 50px;
-  height: 30px;
-  border-radius: 10%;
   font-family:sans-serif;
   border: 0px;
-  margin-left: 3%;
 }
 .tasks{
   width: 75%;
   font-size: large;
-  display: grid;
-  
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-items: center;
+  border:0px;
 }
 
 .task{
+
   width: 100%;
-  height: 50px;
-  border-bottom: 2px solid gray;
-  border-radius: 5px;
-  margin: 1rem;
-  padding: 1rem;
+  height: 100px;
+  border-bottom: 5px solid gray;
+  border-radius: 2px;
+  margin: 30px;
+  padding: 0rem;
   display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
 }
 .taskText{
   background-color: transparent;
 }
-.EditandDelete
-{
-  display: flex ;
-}
-.deleteButton{
-  background-color: red;
-}
-.editButton{
-  background-color: yellow;
-  color: black;
+input[checkbox]{
+  width: 150px;
+  height: 50px;
 }
